restructured file tree and added files in compliance with structure generated using express-generator

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@ npm-debug.log
 # Docker
 Dockerfile
 docker-compose.yml
+
+# Ignore hist
+hist
+
+# Configs
+config/*
+
+# I don't ever see package-lock anywhere 
+package-lock.json
